{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "bec84181-af82-4e4c-8087-b37675fa9bf7",
            "actions": [
                {
                    "name": "Item1",
                    "type": "Button",
                    "id": "b267775c-0e50-4d79-8d1f-bf1f1ad76fb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Item2",
                    "type": "Button",
                    "id": "9b5b1c42-e6f3-40c1-971e-34eb277fd287",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Item3",
                    "type": "Button",
                    "id": "23c1348b-8a5a-4d25-af65-651b173f945d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Item4",
                    "type": "Button",
                    "id": "ae4efece-c0b2-490f-bc7b-1a80803006db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b2432e9-ed87-47a9-85ad-cc5a4b7a71d4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "938ac7d5-f956-4072-9023-fdd4b01012bd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6865f834-2498-4636-8e05-703940048ff8",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "695ce294-d86f-4a2d-bf3e-92f0bd00621e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}